fix: navbar padding and flexbox gap

--- a/src/app/components/Navbar/styles.module.scss
+++ b/src/app/components/Navbar/styles.module.scss
@@ -1,12 +1,13 @@
 .navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   width: 100%;
   .title {
     font-size: 40px;
-    margin: 15px 10px;
+    padding: 15px 0px;
+    text-align: start;
     @media (max-width: 576px) {
+      padding: 15px;
+      font-size: 30px;
+      text-align: center;
     }
   }
 }
