--- a/src/app/components/Preview/styles.module.scss
+++ b/src/app/components/Preview/styles.module.scss
@@ -1,5 +1,4 @@
 .preview {
-  margin: 0px 20px;
   display: flex;
   flex-direction: column;
   justify-content: center;
