--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -48,4 +48,5 @@ h1 {
   flex-wrap: wrap-reverse;
   justify-content: center;
   align-items: center;
+  gap: 15px;
 }
